# CustomAnroidShareMemory

./: README.en.md  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Log.h  android_shm.cpp  android_shm.h  mysharememory.cpp
app/src/main/java/com/baidu/ryujin/ktc/: MainActivity.kt  MainActivity2.kt  Message.kt  MyShareMemory.kt  Packet.kt  TestShareMemoryService.kt
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
